--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit existing article<h1>
+<h1>Edit existing article</h1>
 
   <% if @article.errors.any? %>
   <h2>Please correct the following error(s) to successfully create the new article.</h2>
@@ -25,3 +25,5 @@
     </p>
 
   <% end %>
+
+  <%= link_to "Back to Articles", articles_path %>
