--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h1>Home page, homeslice</h1>
 
-<%= link_to 'About', pages_about_path %>
+<%= link_to "Articles", articles_path %> | <%= link_to "About", pages_about_path %>
