--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>Home page, homeslice</h1>
-
-<%= link_to "Articles", articles_path %> | <%= link_to "About", about_path %>
+<div class="center jumbotron">
+<h1>BLOG HOG</h1>
+<%= link_to "Sign Up Now!", "#", class: "btn btn-primary btn-lg" %>
+</div>
