--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-$navbar-default-bg: #08088A;
+$navbar-default-bg: maroon;
 
 
 @import "bootstrap-sprockets";
@@ -20,4 +20,45 @@ $navbar-default-bg: #08088A;
 
 .center {
   text-align: center;
+}
+
+.jumbotron {
+  background-image: asset-url('IMG_7114.JPG');
+  background-size: cover;
+  height: 550px;
+}
+
+.jumbotron h1 {
+  color: goldenrod;
+}
+
+.btn-xlarge {
+  font-size: 1.7em;
+  background-color: darkgreen;
+  border: none;
+}
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+footer a:hover {
+  color: maroon;
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 15px;
 }
