Styled form partial

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,12 +29,12 @@ $navbar-default-bg: maroon;
 }
 
 .jumbotron h1 {
-  color: goldenrod;
+  color: tan;
 }
 
 .btn-xlarge {
   font-size: 1.7em;
-  background-color: darkgreen;
+  background-color: tan;
   border: none;
 }
 
