--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,17 @@
-<h1>Showing selected article</h1>
-
-<p>
+<h2 align="center">
   Title: <%= @article.title %>
-</p>
+</h2>
 
-<p>
-  Description: <%= @article.description %>
-</p>
-
-<%= link_to "Edit", edit_article_path(@article) %> |
-<%= link_to "Back to Articles", articles_path %>
+<div class="well col-xs-8 col-xs-offset-2">
+  <h4 class="description center"><strong>Description:</strong></h4>
+  <hr>
+  <%= simple_format(@article.description) %>
+  <div class="article-actions">
+    <%= link_to "Edit Article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+    <%= link_to "Delete Article", article_path(@article), method: :delete,
+                    data: { confirm: "Are you sure you want to delete this article?" },
+                    class: "btn btn-xs btn-danger" %>
+    <%= link_to "View All Articles", articles_path, class: "btn btn-xs btn-success" %>
+  </div>
+  </div>
+</div>
