--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,8 @@
 <div class="center jumbotron">
-<h1>BLOG HOG</h1>
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+    <h1>blog site</h1>
+  </div>
+</div>
 <%= link_to "Sign Up Now!", "#", class: "btn btn-danger btn-xlarge" %>
 </div>
