--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -77,3 +77,13 @@ footer ul li {
   float: left;
   margin-left: 15px;
 }
+
+.article-title {
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.article-body {
+  padding: 15px 0;
+  border-top: 1px solid #eaeaea;
+}
