Cleaned up some views and made certain items only show for appropriate user

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,5 +4,5 @@
     <h1>blog site</h1>
   </div>
 </div>
-<%= link_to "Sign Up Now!", "#", class: "btn btn-danger btn-xlarge" %>
+<%= link_to "Sign Up Now!", signup_path, class: "btn btn-danger btn-xlarge" %>
 </div>
