--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,7 @@
 <h1 align="center">All Categories</h1>
 
 <div align="center">
+<%= will_paginate %>
 <% @categories.each do |category| %>
 
   <ul class="listing">
@@ -12,6 +13,6 @@
       </div>
     </div>
   </ul>
+  <% end %>
+  <%= will_paginate %>
 </div>
-
-<% end %>
