--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,7 +8,7 @@
         <%= f.label :title %>
       </div>
       <div class="col-sm-8">
-        <%= f.text_field :title, class: "form-control", placeholder: "Title of Articele", autofocus: true %>
+        <%= f.text_field :title, class: "form-control", placeholder: "Title of Article", autofocus: true %>
       </div>
     </div>
     <div class="form-group">
@@ -19,6 +19,18 @@
         <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of Article" %>
       </div>
     </div>
+
+    <div class="form-group">
+      <div class="row">
+        <div class="col-sm-offset-2 col-sm-8">
+          <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+            <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") +
+              cb.text } %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <%= f.submit class: 'btn btn-primary btn-lg' %>
