Added categories to articles index

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -98,3 +98,15 @@ footer ul li {
   list-style: none;
   padding-left: 0;
 }
+
+.badge {
+  background-color: #dba167;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+  border-radius: 0;
+}
+
+.input-checkbox input {
+  width: auto !important;
+}
